--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
-    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
   }
 }
